@@ -1,0 +1,34 @@
+/*
+ *  MicroEmulator
+ *  Copyright (C) 2002 Bartek Teodorczyk <barteo@it.pl>
+ *
+ *  This library is free software; you can redistribute it and/or
+ *  modify it under the terms of the GNU Lesser General Public
+ *  License as published by the Free Software Foundation; either
+ *  version 2.1 of the License, or (at your option) any later version.
+ *
+ *  This library is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
+ *  Lesser General Public License for more details.
+ *
+ *  You should have received a copy of the GNU Lesser General Public
+ *  License along with this library; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+package net.barteo.me.j2sedevice.minimum;
+
+import com.barteo.emulator.EmulatorContext;
+import com.barteo.emulator.device.j2se.J2SEDevice;
+
+
+public class MinimumDevice extends J2SEDevice
+{
+  
+  public void init(EmulatorContext context) 
+  {
+    super.init(context, "/net/barteo/me/j2sedevice/minimum/device.xml");
+  }
+  
+}
