@@ -1,0 +1,329 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+
+<device>
+  <img name="normal" src="/net/barteo/me/j2sedevice/minimum/normal.png"/>
+  <img name="over" src="/net/barteo/me/j2sedevice/minimum/over.png"/>
+  <img name="pressed" src="/net/barteo/me/j2sedevice/minimum/pressed.png"/>
+	<rectangle>
+		<x>0</x>
+		<y>0</y>
+		<width>170</width>
+		<height>445</height>
+	</rectangle>
+	<display>
+    <numcolors>2</numcolors>
+    <iscolor>false</iscolor>
+		<foreground>000000</foreground>
+		<background>d4d7cf</background>
+		<rectangle>
+			<x>33</x>
+			<y>38</y>
+			<width>104</width>
+			<height>134</height>
+		</rectangle>
+		<paintable>
+			<x>0</x>
+			<y>10</y>
+			<width>96</width>
+			<height>96</height>
+		</paintable>
+    <img name="up" src="/net/barteo/me/j2sedevice/minimum/up.png">
+		  <paintable>
+			  <x>49</x>
+			  <y>130</y>
+			  <width>8</width>
+			  <height>8</height>
+		  </paintable>
+    </img>
+    <img name="down" src="/net/barteo/me/j2sedevice/minimum/down.png">
+		  <paintable>
+			  <x>57</x>
+			  <y>130</y>
+			  <width>8</width>
+			  <height>8</height>
+		  </paintable>
+    </img>
+    <img name="mode" type="123" src="/net/barteo/me/j2sedevice/minimum/123.png">
+		  <paintable>
+			  <x>0</x>
+			  <y>0</y>
+			  <width>14</width>
+			  <height>7</height>
+		  </paintable>
+    </img>
+    <img name="mode" type="ABC" src="/net/barteo/me/j2sedevice/minimum/abc_upper.png">
+		  <paintable>
+			  <x>0</x>
+			  <y>0</y>
+			  <width>14</width>
+			  <height>7</height>
+		  </paintable>
+    </img>
+    <img name="mode" type="abc" src="/net/barteo/me/j2sedevice/minimum/abc_lower.png">
+		  <paintable>
+			  <x>0</x>
+			  <y>0</y>
+			  <width>14</width>
+			  <height>7</height>
+		  </paintable>
+    </img>
+	</display>
+	<keyboard>
+		<softbutton name="" key="VK_F1" alignment="LEFT">
+			<rectangle>
+				<x>30</x>
+				<y>184</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+			<paintable>
+				<x>0</x>
+				<y>127</y>
+				<width>38</width>
+				<height>16</height>
+			</paintable>
+			<command>BACK</command>
+			<command>EXIT</command>
+			<command>CANCEL</command>
+			<command>STOP</command>
+		</softbutton>
+		<softbutton name="" key="VK_F2" alignment="RIGHT" menuactivate="true">
+			<rectangle>
+				<x>103</x>
+				<y>184</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+			<paintable>
+				<x>66</x>
+				<y>127</y>
+				<width>38</width>
+				<height>16</height>
+			</paintable>
+			<command>OK</command>
+			<command>SCREEN</command>
+			<command>ITEM</command>
+			<command>HELP</command>
+		</softbutton>
+		<button name="l" key="VK_LEFT">
+			<rectangle>
+				<x>30</x>
+				<y>240</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="r" key="VK_RIGHT">
+			<rectangle>
+				<x>103</x>
+				<y>240</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="u" key="VK_UP">
+			<rectangle>
+				<x>68</x>
+				<y>213</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="d" key="VK_DOWN">
+			<rectangle>
+				<x>68</x>
+				<y>267</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="sel" key="VK_ENTER">
+			<rectangle>
+				<x>68</x>
+				<y>240</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="0" key="VK_0">
+      <chars>
+        <char> </char>
+        <char>0</char>
+      </chars>
+			<rectangle>
+				<x>68</x>
+				<y>391</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="1" key="VK_1">
+      <chars>
+        <char>.</char>
+        <char>,</char>
+        <char>?</char>
+        <char>!</char>
+        <char>:</char>
+        <char>;</char>
+        <char>-</char>
+        <char>+</char>
+        <char>#</char>
+        <char>*</char>
+        <char>(</char>
+        <char>)</char>
+        <char>'</char>
+        <char>"</char>
+        <char>_</char>
+        <char>@</char>
+        <char>&amp;</char>
+        <char>$</char>
+        <char>%</char>
+        <char>/</char>
+        <char>&lt;</char>
+        <char>&gt;</char>
+        <char>=</char>
+        <char>1</char>
+      </chars>
+			<rectangle>
+				<x>30</x>
+				<y>309</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="2" key="VK_2">
+      <chars>
+        <char>a</char>
+        <char>b</char>
+        <char>c</char>
+        <char>2</char>
+      </chars>
+			<rectangle>
+				<x>68</x>
+				<y>309</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="3" key="VK_3">
+      <chars>
+        <char>d</char>
+        <char>e</char>
+        <char>f</char>
+        <char>3</char>
+      </chars>
+			<rectangle>
+				<x>103</x>
+				<y>309</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="4" key="VK_4">
+      <chars>
+        <char>g</char>
+        <char>h</char>
+        <char>i</char>
+        <char>4</char>
+      </chars>
+			<rectangle>
+				<x>30</x>
+				<y>337</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="5" key="VK_5">
+      <chars>
+        <char>j</char>
+        <char>k</char>
+        <char>l</char>
+        <char>5</char>
+      </chars>
+			<rectangle>
+				<x>68</x>
+				<y>337</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="6" key="VK_6">
+      <chars>
+        <char>m</char>
+        <char>n</char>
+        <char>o</char>
+        <char>6</char>
+      </chars>
+			<rectangle>
+				<x>103</x>
+				<y>337</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="7" key="VK_7">
+      <chars>
+        <char>p</char>
+        <char>q</char>
+        <char>r</char>
+        <char>s</char>
+        <char>7</char>
+      </chars>
+			<rectangle>
+				<x>30</x>
+				<y>364</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="8" key="VK_8">
+      <chars>
+        <char>t</char>
+        <char>u</char>
+        <char>v</char>
+        <char>8</char>
+      </chars>
+			<rectangle>
+				<x>68</x>
+				<y>364</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="9" key="VK_9">
+      <chars>
+        <char>w</char>
+        <char>x</char>
+        <char>y</char>
+        <char>z</char>
+        <char>9</char>
+      </chars>
+			<rectangle>
+				<x>103</x>
+				<y>364</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="*" key="VK_MULTIPLY">
+      <chars>
+        <char>*</char>
+        <char>+</char>
+      </chars>
+			<rectangle>
+				<x>30</x>
+				<y>391</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+		<button name="#" key="VK_MODECHANGE">
+			<rectangle>
+				<x>103</x>
+				<y>391</y>
+				<width>37</width>
+				<height>27</height>
+			</rectangle>
+		</button>
+	</keyboard>
+</device>
